# gpt_lite

./: BUILD_STATUS.md  INTEGRATION_GUIDE.md  LOADING_SCREEN_GUIDE.md  NDK_INSTALLATION.md  NDK_INSTALLATION_v27.md  README.md  ffigen.yaml  pubspec.yaml  pubspec_minimal.yaml  setup_llama.bat  setup_llama.sh  verify_build.bat
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  CMakeLists_real.txt  ggml_arm_neon_compat.h  llama_bridge.cpp  llama_bridge_minimal.cpp  llama_bridge_phase2.cpp  llama_bridge_phase2_simple.cpp  llama_bridge_phase3_real.cpp  llama_bridge_phase3_real_fixed.cpp  llama_bridge_stub.cpp  llama_stub.cpp  llama_stub_simple.cpp
android/app/src/main/cpp/ggml/src/ggml-cpu/: ggml-cpu-impl.h
android/app/src/main/cpp/llama_cpp/: llama-mmap.cpp
android/app/src/main/kotlin/com/example/gpt_lite/: LlamaCppPlugin.kt  MainActivity.kt
assets/models/: .gitkeep
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: chat_message.dart
lib/providers/: chat_provider.dart
lib/screens/: basic_chat_screen.dart  chat_screen.dart  chat_screen.dart.backup  model_loading_screen.dart  model_selection_screen.dart  simple_chat_screen.dart
lib/services/: llama_cpp_service.dart
lib/widgets/: message_bubble.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
